# simulador-colas-inteligente

./: .gitignore  CMakeLists.txt  app.py  app_banco.py  mi_modulo.cpp  requirements.txt  simulacion_banco.py  simulacion_dashboard_final.py  simulacion_final.py  simulacion_master.py  simulacion_pro.py  simulacion_variable.py  supermercado_myth.py
